[build-system]
requires = ["setuptools>=42", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sai_logging"
version = "0.2.2"
requires-python = ">=3.9"

[project.urls]
index = "https://git.saizo.gay/api/packages/saizo/pypi/simple/"
source = "https://git.saizo.gay/saizo/sai_logging"
