[metadata]
author = saizo
author_email = saizo@simplemail.is
home_page = https://git.saizo.gay/saizo/sai_logging
description = personal logger used for scripts
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
